Adding/removing of players

--- a/frontend/ws_test.html
+++ b/frontend/ws_test.html
@@ -11,6 +11,7 @@
 
             socket.onopen = function() {
                isopen = true;
+               console.log("Connected");
             }
 
             socket.onmessage = function(e) {
