--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,57 @@
 <script type="text/javascript">
 var floor = 0;
 var wall = 0;
+
+var ship = 36;
+var spaceship = 37;
+var plane = 38;
+var tropicalIsland = 39;
+var arctic = 40;
+var desert = 41;
+
+var lifeRing = 0;
+var rope = 1;
+var raincoat = 2;
+var sextant = 3;
+var anchor = 4;
+
+var spacehelmet = 5;
+var oxygen = 6;
+var jetpack = 7;
+var alien = 8;
+var phaser = 9;
+
+var parachute = 10;
+var landingGear = 11;
+var breathingMask = 12;
+var suitcase = 13;
+var passport = 14;
+
+var cocktail = 15;
+var beachball = 16;
+var trunks = 17;
+var desertIslandDisc = 18;
+var pineapple = 19;
+
+var penguin = 20;
+var snowman = 21;
+var pole = 22;
+var santa = 23;
+var scarf = 24;
+
+var palmTree = 25;
+var camel = 26;
+var waterBottle = 27;
+var bucket = 28;
+var duneBuggy = 29;
+
+var fists = 30;
+var spoon = 31;
+var gun = 32;
+var knife = 33;
+var nailBoard = 34;
+var taser = 35;
+
 var tile_height = 1;
 var tile_width = 1;
 
@@ -37,7 +88,7 @@ socket.onmessage = function(msg){
         for(i = 0; i < world.length; i++){
             var row = world[i];
             for(j = 0; j < row.length; j++){
-                game.add.sprite(i*50, j*50, definitions[row[j]]);
+                game.add.sprite(i*tile_width, j*tile_height, definitions[row[j]]);
             }
         }
 
@@ -47,9 +98,12 @@ socket.onmessage = function(msg){
 function preload() {
     definitions[floor] = "floor";
     definitions[wall] = "wall";
-    game.load.image("player","../resources/art/human.png", 50, 50);
-    game.load.image("wall", "../resources/art/wall.png", 50, 50);
 
+    
+
+    game.load.image("player","resources/art/human.png", tile_width, tile_height);
+    game.load.image("wall", "resources/art/wall.png", tile_width, tile_height);
+    game.load.image("floor", "resources/art/human.png", tile_width, tile_height);
 }
 
 function create() {
