--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,12 @@
     <meta charset="UTF-8" />
     <title>High Octane Trading Scenarios</title>
     <script type="text/javascript" src="js/phaser.js"></script>
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
 
+	<div id="game"></div>
     <script type="text/javascript" src="js/game.js"></script>
-    
+
 </body>
 </html>
