--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-
+    <div id="container">
+	<div id="status">
+	    <div id="statustext">Loading...</div>
+	</div>
 	<div id="game"></div>
+    </div>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
-
 </body>
 </html>
