Updated title for readability

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>High Octane Trading Scenarios</title>
+    <title>H.O.T.S.</title>
     <script type="text/javascript" src="js/phaser.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
