Lobby and player names

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,17 @@
 </head>
 <body>
     <div id="container">
-	<div id="status">
-	    <div id="statustext">Loading...</div>
-	</div>
-	<div id="game"></div>
+    	<div id="status">
+    	    <div id="statustext">Loading...</div>
+    	</div>
+        <div id="lobby">
+            <div id="lobbyInner">
+                <h1>Lobby</h1>
+                <ul id="players">
+                </ul>
+            </div>
+        </div>
+    	<div id="game"></div>
     </div>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
