Lobby start timeout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     	</div>
         <div id="lobby">
             <div id="lobbyInner">
-                <h1>Lobby</h1>
+                <h1 id="title">Lobby</h1>
                 <ul id="players">
                 </ul>
             </div>
