--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,9 @@
                     </ul>
                 </div>
             </div>
+            <div id="win">
+                <div id="winner"></div>
+            </div>
             <div id="game"></div>
         </div>
     </div>
