screw you context menu

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="js/phaser.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
-<body>
+<body  oncontextmenu="return false;">
     <div id="gameframe">
         <h1>H.O.T.S.</h1>
         <h4>High Octane Trading Scenarios</h4>
